<resources>
    <string name="app_name">CentralBark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name: </string>
    <string name="mail">Email: </string>
    <string name="password">Password: </string>
    <string name="profile_photo">Profile Photo: </string>
    <string name="birthday">Birthday: </string>
    <string name="breed">Breed: </string>
    <string name="lives_in">Lives In:</string>
    <string name="my_self_summery">My Self-Summery:</string>
    <string name="sign_me_up">Sign Me Up !</string>
    <string name="choose_image">Choose Image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_me_in">Log Me In !</string>
    <string name="remember_me">Remember Me</string>
    <string name="bullet"> \u2022 </string>
    <string name="new_post">New Post</string>
    <string name="write_cation_here">Write Cation Here...</string>
    <string name="age">Age:</string>
    <string name="friends">Friends:</string>
    <string name="posts">Posts:</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="notifications">Notifications</string>
    <string name="confirm">Confirm</string>
    <string name="Password">Password</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="make_friend">Make Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="places">Places</string>
    <string name="accounts">Accounts</string>
    <string name="search">Search</string>
    <string name="go_now">go now</string>
    <string name="my_self_summary">My self-summary</string>
    <string name="must_contain_8_chars">Must contain 8 chars</string>
</resources>