<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="Central Bark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sign_Up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/sign_in"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/mail_title_sign_up_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:fontFamily="casual"
        android:text="@string/mail"
        android:textSize="12sp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_title" />

    <EditText
        android:id="@+id/mail_edit_text_sign_up_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/mail_title_sign_up_screen"
        app:layout_constraintTop_toBottomOf="@+id/Sign_Up_title" />

    <TextView
        android:id="@+id/password_title_sign_up_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/password"
        android:textSize="12sp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_title_sign_up_screen" />

    <EditText
        android:id="@+id/password_edit_text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="casual"
        android:textSize="12sp"
        android:layout_marginTop="5dp"

        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/password_title_sign_up_screen"
        app:layout_constraintTop_toBottomOf="@+id/mail_edit_text_sign_up_screen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_me_up_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/my_button"
        android:fontFamily="casual"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/log_me_in"
        android:textColor="@color/gray"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_sign_up" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:fontFamily="casual"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_me_up_button" />


</androidx.constraintlayout.widget.ConstraintLayout>