<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".searchAccountFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchAccounts_Button_searchPlaces"
        android:text="@string/accounts"
        android:fontFamily="casual"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchPlaces_Button_searchPlaces"
        android:text="@string/places"
        android:fontFamily="casual"
        android:background="@android:color/transparent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/separator1_search_places_screen"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchAccounts_Button_searchPlaces"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/searchPlaces_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        app:layout_constraintTop_toBottomOf="@id/separator1_search_places_screen"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@id/searchImage_ImageView_searchPlaces"
        />

    <ImageView
        android:id="@+id/searchImage_ImageView_searchPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/search_icon"
        android:background="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/searchPlaces_EditText"
        app:layout_constraintBottom_toBottomOf="@id/searchPlaces_EditText"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_SearchPlaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPlaces_EditText" />


</androidx.constraintlayout.widget.ConstraintLayout>